# drf_api_chatbot

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: db.sqlite3  env_example
app/blobs/: admin.py  apps.py  models.py
app/blobs/api/: serializers.py  urls.py  views.py
app/blobs/migrations/: 0001_initial.py
app/chat/: admin.py  models.py
app/chat/api/: serializers.py  urls.py  views.py
app/chat/migrations/: 0001_initial.py  0002_alter_chatsession_provider.py
app/chat/services/: chat_flow.py  chroma_utils.py  embeddings.py  text_splitters.py
app/chroma_db/: chroma.sqlite3
app/data/: eventim_1.txt  eventim_2.txt
app/events/: admin.py  models.py  urls.py  validators.py  views.py
app/events/api/: serializers.py  urls.py  views.py
app/events/fixtures/: events_fixtures.json
app/events/migrations/: 0001_initial.py  0002_alter_category_options_event.py  0003_event_author_event_date_event_min_group.py  0004_category_created_at_category_updated_at.py  0005_tag_event_tags.py  0006_review.py
app/project/: authentications.py  middlewares.py  mixins.py  settings.py  urls.py
app/users/: urls.py
diagramme/: class_chatmodels.mermaid  sequence_flow.mermaid  sequence_rag_flow.mermaid
http_requests/blobs/: start_job.http
http_requests/chat/: chat_message_create.http  create_session.http
http_requests/events/: get_create_category.http  get_create_event.http  simple_post.http  update_retrieve_delete_event.http
http_requests/proxy_header/: get_events.http
http_requests/users/: get_token.http
local_blob_job/: cli_tool.py
markdowns/: blob.md  chat_flow.md  generate_rag_data.md  keycloak.md  rag_flow.md  ruff_extension.md
remote_blob_job/: cli_tool.py  readme.md  service.py
(+7 files in other folders)
